fixed the collapse menu

--- a/css/foobar.css
+++ b/css/foobar.css
@@ -69,7 +69,8 @@ p1 {
 }
 
 .btn{
-    margin: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     color: #A59484;
 }
 
